--- a/docs/image-optimization.mdx
+++ b/docs/image-optimization.mdx
@@ -172,7 +172,7 @@ Required unless [layout="fill"`](#layout).
 
 ### Optional Props
 
-The `Image` component optionally accepts the following properties.
+The `<Image />` component optionally accepts the following properties.
 
 #### layout
 
@@ -185,6 +185,46 @@ When `intrinsic`, the image will scale the dimensions down for smaller viewports
 When `responsive`, the image will scale the dimensions down for smaller viewports and scale up for larger viewports.
 
 When `fill`, the image will stretch both width and height to the dimensions of the parent element, usually paired with [object-fit](https://developer.mozilla.org/en-US/docs/Web/CSS/object-fit).
+
+Try it out:
+
+- [Demo the `fixed` layout](https://image-component.nextjs.gallery/layout-fixed)
+- [Demo the `intrinsic` layout](https://image-component.nextjs.gallery/layout-intrinsic)
+- [Demo the `responsive` layout](https://image-component.nextjs.gallery/layout-responsive)
+- [Demo the `fill` layout](https://image-component.nextjs.gallery/layout-fill)
+- [Demo background image](https://image-component.nextjs.gallery/background)
+
+### loader
+
+A custom function used to resolve URLs. Defaults to [`images` object in `blitz.config.js`](/docs/basic-features/image-optimization.md#loader).
+
+`loader` is a function returning a string, given the following parameters:
+
+- [`src`](#src)
+- [`width`](#width)
+- [`quality`](#quality)
+
+<!-- prettier-ignore-start -->
+```js
+import {Image} from 'blitz'
+
+const myLoader = ({ src, width, quality }) => {
+  return `https://example.com/${src}?w=${width}&q=${quality || 75}`
+}
+
+const MyImage = (props) => {
+  return (
+    <Image
+      loader={myLoader}
+      src="/me.png"
+      alt="Picture of the author"
+      width={500}
+      height={500}
+    />
+  )
+}
+```
+<!-- prettier-ignore-end -->
 
 #### sizes
 
@@ -221,6 +261,12 @@ The image position when using `layout="fill"`.
 [Learn more](https://developer.mozilla.org/en-US/docs/Web/CSS/object-position)
 
 #### loading
+
+> **Attention**: This property is only meant for advanced usage. Switching an
+> image to load with `eager` will normally **hurt performance**.
+>
+> We recommend using the [`priority`](#priority) property instead, which
+> properly loads the image eagerly for nearly all use cases.
 
 The loading behavior of the image. Defaults to `lazy`.
 
